--- a/Microsoft.Dynamics365.UIAutomation.Sample/app.config
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/app.config
@@ -15,13 +15,13 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="OnlineUsername" value="" />
-    <add key="OnlinePassword" value="" />
-    <add key="OnlineCrmUrl" value="" />
+    <add key="OnlineUsername" value="madhu.govindaraj@education.gov.uk" />
+    <add key="OnlinePassword" value="07578620920TestSpecialist!" />
+    <add key="OnlineCrmUrl" value="https://dfe-capital-test.crm4.dynamics.com/main.aspx" />
     <add key="MfaSecretKey" value="" />
     <add key="AzureKey" value="" />
     <!-- IE,Chrome,Firefox,Edge,Remote-->
-    <add key="BrowserType" value="Chrome" />
+    <add key="BrowserType" value="Edge" />
     <add key="DriversPath" value="" />
     <add key="UsePrivateMode" value="true" />
     <!-- The following settings are only used if BrowserType = "Remote" above -->
